# claude_computer_use

./: LICENSE.md  README.md  pyproject.toml
src/: crew.py  main.py
src/config/: agents.yaml  tasks.yaml
src/tools/: base.py  computer.py
