[tool.poetry]
name = "claude_computer_use"
version = "0.1.0"
description = "Adding Claude computer use as one of the tools to crewai"
authors = ["Subra Arun"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentops = "^0.3.12"
crewai = "^0.63.6"
crewai-tools= "0.12.1"
python-dotenv="1.0.1"

[project.scripts]
claude_computer_use = "claude_computer_use.main:run"
run_crew = "claude_computer_use.main:run"
train = "claude_computer_use.main:train"
replay = "claude_computer_use.main:replay"
test = "claude_computer_use.main:test"